[tool.poetry]
name = "pybm"
version = "0.1.0"
description = ""
authors = ["tsurubee"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
jupyterlab = "^2.0.1"
torch = "^1.4.0"
torchvision = "^0.5.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
