[tool.poetry]
name = "pybm"
version = "0.1.0"
description = "Boltzmann machines implemented in Python"
authors = ["Hirofumi Tsuruta"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
sqapy = "^0.1.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.2.1"
jupyterlab = "^2.0.1"
torchvision = "^0.5.0"
torch = "^1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
